Feature/get all events device name (#174)
* Get all events now returns dev_name also

* Extra safety check for get all events dictionary creation

* Added another event for test_get_all_events

* SWAG
